<resources>
    <string name="app_name">Storage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">save to internal storage</string>
    <string name="saveDB">save to database</string>
    <string name="save2SD">save to External Storage</string>
    <string name="bufferedsave">Buffered Save</string>
    <string name="read">load from internal storage</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="title_activity_activity_shared_preferences">ActivitySharedPreference</string>
    <string name="sharedpreferences">Shared Preferences</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_activity__database">Activity_Database</string>
    <string name="title_activity_display_contact">DisplayContact</string>

    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>

    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Database">Database</string>
    <string name="title_activity_save2_sd">Save2SDActivity</string>
    <string name="title_activity_saving_files__int__ext_2_">SavingFiles_Int_Ext_2_Activity</string>

</resources>
