<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:onClick="save"
        android:text="@string/save"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/save2SD"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:onClick="openSave2SD"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="read"
        android:text="@string/read"
        android:layout_below="@+id/btnSD"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharedpreferences"
        android:id="@+id/btnOpenPref"
        android:layout_marginTop="38dp"
        android:onClick="openPrefs"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Database"
        android:id="@+id/btnDB"
        android:layout_below="@+id/btnOpenPref"
        android:layout_alignLeft="@+id/btnOpenPref"
        android:layout_alignStart="@+id/btnOpenPref"
        android:layout_alignRight="@+id/btnOpenPref"
        android:layout_alignEnd="@+id/btnOpenPref"
        android:onClick="openDB"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bufferedsave"
        android:id="@+id/btnBufferedSave"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnSD"
        android:layout_alignEnd="@+id/btnSD"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="openBufferedSave"/>

</RelativeLayout>